# ANaConDA_extended

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG  README
analysers/atomrace/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.pin  Nmakefile  Nmakefile.pin  nmake.bat
analysers/atomrace/src/: atomrace.cpp
analysers/contract-validator/: Makefile
analysers/contract-validator/src/: contract-validator.cpp  contract.cpp  contract.h  fa.hpp  fsm.hpp  vc.hpp  window.cpp  window.h
analysers/data-printer/: Makefile
analysers/data-printer/src/: data-printer.cpp
analysers/data-validator/: Makefile
analysers/data-validator/src/: data-validator.cpp
analysers/event-printer/: .cproject  .project  CMakeLists.txt  Makefile
analysers/event-printer/src/: event-printer.cpp
analysers/goodlock/: .cproject  .project  CMakeLists.txt  Makefile  Nmakefile
analysers/goodlock/conf/: goodlock.conf
analysers/goodlock/src/: cycles.hpp  goodlock.cpp
analysers/hldr-detector/: .cproject  .project  CMakeLists.txt  Makefile
analysers/hldr-detector/src/: hldr-detector.cpp
analysers/param-contract-validator/: Makefile
analysers/param-contract-validator/src/: contract.cpp  contract.h  fa.hpp  param-contract-validator.cpp  vc.hpp  window.cpp  window.h
analysers/simple-contract-validator/src/: contract-validator.cpp  contract.cpp  contract.h  fa.hpp  vc.hpp
analysers/statistics-collector/: Makefile
analysers/statistics-collector/src/: statistics-collector.cpp
analysers/tx-monitor/: .cproject  .project  CMakeLists.txt  Makefile  Nmakefile
analysers/tx-monitor/src/: tx-monitor.cpp
docker/: README.md
docker/anaconda-base/: Dockerfile
docker/anaconda-ubuntu18-devel/: docker-compose.yml
docker/anaconda-ubuntu18-latest/: docker-compose.yml
examples/: Makefile
framework/: .cproject  .project  CMakeLists.txt  Findlibdie-wrapper.cmake  GenerateScannerInfo.cmake  Makefile  Nmakefile  anaconda.api  anaconda.bat  anaconda.sh
framework/conf/: anaconda.conf  die-excludes  lock-functions  unlock-functions  wait-functions
framework/conf/filters/die/: exclude
framework/conf/filters/functions/: exclude
framework/conf/filters/ins/: exclude
framework/conf/hooks/: generic_wait  join  lock  lock_init  signal  thread_create  tx_read  tx_start  tx_write  unlock  unwind
framework/src/: anaconda.cpp  anaconda.h  analyser.cpp  analyser.h  cbstack.cpp  cbstack.h  config.h  defs.h  filter.cpp  filter.h  index.cpp  index.h  mapper.cpp  mapper.h  noise.cpp  noise.h  settings.cpp  settings.h  shlib.cpp  shlib.h  types.h  version.cpp  version.h
framework/src/callbacks/: access.cpp  access.h  exception.cpp  exception.h  noise.cpp  noise.h  shared.hpp  sync.cpp  sync.h  thread.cpp  thread.h  tm.cpp  tm.h
framework/src/coverage/: preds.cpp  svars.cpp  svars.h  sync.cpp  sync.h
framework/src/linux/: elfutils.cpp
framework/src/monitors/: preds.cpp  preds.h  preds.hpp  svars.cpp  svars.hpp  sync.cpp  sync.h  sync.hpp
framework/src/pin/: tls.h
framework/src/util/: backtrace.hpp  lockobj.hpp  properties.hpp  random.cpp  random.hpp  rwmap.hpp  scopedlock.hpp  writers.cpp  writers.h
framework/src/utils/: backtrace.hpp  ctops.hpp  debug.cpp  debug.h  env.cpp  env.h  lockobj.hpp  properties.hpp  random.cpp  random.hpp  rwmap.hpp  scopedlock.hpp  seq.hpp  thread.h  tldata.hpp  unwind.cpp  unwind.h  writers.cpp  writers.h
framework/src/utils/linux/: dlutils.cpp  dlutils.h  elfutils.cpp  elfutils.h
framework/src/utils/pin/: tls.cpp  tls.h
framework/src/utils/plugin/: settings.hpp
framework/src/utils/windows/: dll.cpp  dll.h  pe.cpp  pe.h
integration_with_atomer/: AnacondaConfFromAtomerResult.py  clean_example.sh  run_example.sh
integration_with_atomer/base_conf/: anaconda.conf
integration_with_atomer/base_conf/filters/ins/: exclude
integration_with_atomer/base_conf/hooks/: lock  noise_point  thread_create  thread_init  tx_abort  tx_commit
integration_with_atomer/example/atomer_outputs/: example2.json
integration_with_atomer/src/: ArgumentParser.py  ConfigCreator.py
libraries/libdie/: .project  Makefile
libraries/libdie/cmake/: SetupEnvironment.cmake
libraries/libdie/src/: version.cpp
libraries/libdie/src/dwarf/: dw_classes.cpp  dw_die.cpp  dw_visitors.h
libraries/libraries/: .cproject  CHANGELOG  CMakeLists.txt  README
libraries/libraries/cmake/: CheckHeaderExists.cmake  Findlibdwarf.cmake  GenerateBuildInfo.cmake  Paths.cmake
libraries/libraries/src/: die.cpp  die.h  version.h
libraries/libraries/src/dwarf/: dw_classes.h  dw_die.h  dw_visitors.cpp
libraries/libraries/tools/: dwutils.sh
shared/: Makefile.pin
shared/cmake/: BuildAnalyser.cmake  CheckHeaderExists.cmake  Findanaconda-framework.cmake  Findanaconda.cmake  Findlibdie-wrapper.cmake  Findlibdie.cmake  Findlibdwarf.cmake  Findlibelf.cmake  GenerateBuildInfo.cmake  GenerateScannerInfo.cmake  Paths.cmake  SetupBoost.cmake  SetupEnvironment.cmake  SetupPin.cmake  Tests.cmake
shared/config/: makefile.analyser  makefile.config  makefile.rules
tests/framework/monitoring/exceptions/: exceptions.cpp  exceptions.result
tests/framework/monitoring/functions-longjmp/: functions-longjmp.conf  functions-longjmp.cpp  (+1 more)
tests/shared/: defs.h
tools/: .project  build.bat  build.sh  cygwin.bat  evaluate.sh  executions.sh  gdb.sh  messages.sh  run.sh  test.sh  update.sh  utils.sh
tools/conf/analysers/: anaconda  base  pin
tools/conf/checks/libdwarf/: CMakeLists.txt
tools/conf/checks/libelf/: CMakeLists.txt  CheckHeaderExists.cmake
tools/conf/evaluators/: stamp  stamp-lwm
tools/conf/files/: anaconda  anaconda-atomrace  anaconda-bin  anaconda-event-printer  anaconda-tools  anaconda-tx-monitor  libdie  pinlib-die  pintool-anaconda
tools/conf/programs/: examples  stamp
wrappers/libdie/: .cproject  .gitignore  .project  CMakeLists.txt  CheckHeaderFiles.cmake  Makefile  Makefile.pin  Nmakefile
wrappers/libdie/src/: pin_die.cpp  pin_die.h
wrappers/libdie/src/dwarf/: pin_dw_die.cpp  pin_dw_die.h  pin_dw_visitors.cpp  pin_dw_visitors.h
wrappers/libdie/src/util/: ivalmap.hpp
(+21 files in other folders)
